[gd_scene load_steps=2 format=3 uid="uid://c02xopmqkdo8j"]

[ext_resource type="Script" path="res://scenes/text_particle.gd" id="1_n411w"]

[node name="TextParticle" type="Node2D"]
script = ExtResource("1_n411w")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 16
text = "+ Improved Mood"

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
